test/tests/compiler/5_local_variables/valid/local_var_missing_return.plx
pub fn main(none) i32 {
    a: i32 = 3
    a = a + 5
}
