test/tests/compiler/5_local_variables/invalid_semantics/invalid_lvalue.plx
pub fn main(none) i32 {
    a: i32 = 2
    a + 3 = 4
    return a
}
